@@ -6,7 +6,7 @@ namespace ShadowClip.services
 {
     public interface IEncoder
     {
-        Task Encode(string originalFile, string outputFile, int start, int end,
+        Task Encode(string originalFile, string outputFile, double start, double end,
             IProgress<EncodeProgress> encodeProgresss,
             CancellationToken cancelToken);
     }
